# ffb-cli

./: .gitignore  README.md  pyproject.toml
src/ffb/: config.py  main.py
src/ffb/api/: client.py  endpoints.py
src/ffb/auth/: login.py  session.py
src/ffb/cache/: store.py
src/ffb/commands/: login.py  news.py  players.py  projections.py  rankings.py  startsit.py  trade.py
src/ffb/display/: tables.py
src/ffb/models/: __init__.py  player.py  projection.py  session.py  trade.py
