[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffb-cli"
version = "0.1.0"
description = "CLI tool for The Fantasy Footballers premium tools"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "requests>=2.31",
    "thefuzz[speedup]>=0.22",
    "pydantic>=2.5",
    "playwright>=1.40",
]

[project.scripts]
ffb = "ffb.main:app"

[tool.setuptools.packages.find]
where = ["src"]
